--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ceeco-ai-chatbot",
   "version": "1.0.0",
   "dependencies": {
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0",
+    "react-scripts": "^5.0.1"
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.263.1"
