--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lucide-react": "^0.263.1"
   },
   "scripts": {
+    "dev": "react-scripts start"
     "start": "react-scripts start",
     "build": "react-scripts build"
   }
